--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     
     <header>
-      <h1>V.Vivek Goud</h1>
+      <h1>Vatche Vivek Goud</h1>
       <p>Web developer</p>
     </header>
     
